refactor: re-write the preprocess code

--- a/test/notebooks/predict.ipynb
+++ b/test/notebooks/predict.ipynb
@@ -176,9 +176,7 @@
         "    image = tensor.to(\"cpu\").clone().detach()\n",
         "    image = image.squeeze()\n",
         "    image = inv_normalize(image)\n",
-        "    image = image.numpy()\n",
-        "    image = image.transpose(1,2,0)\n",
-        "    image = image.clip(0, 1)\n",
+        "    image = image.numpy().transpose(1, 2, 0).clip(0, 1)\n",
         "    cv2.imwrite('./2.png', image * 255)\n",
         "    return image\n",
         "\n",
@@ -206,7 +204,7 @@
         "    \n",
         "    result = heatmap * 0.5 + img * 0.8 * 255\n",
         "    \n",
-        "    # cv2.imwrite('/content/1.png', result)\n",
+        "    cv2.imwrite('/content/1.png', result)\n",
         "    result = heatmap * 0.5 / 255 + img * 0.8\n",
         "    result = cv2.merge((cv2.split(result)))\n",
         "    \n",
@@ -251,11 +249,10 @@
         "    def __getitem__(self, idx):\n",
         "        video_path = self.video_names[idx]\n",
         "        frames = []\n",
+        "        # a = int(100/self.count)\n",
+        "        # first_frame = np.random.randint(0, a)\n",
         "\n",
-        "        a = int(100/self.count)\n",
-        "        first_frame = np.random.randint(0, a)\n",
-        "\n",
-        "        for i, frame in enumerate(self.frame_extract(video_path)):\n",
+        "        for _, frame in enumerate(self.frame_extract(video_path)):\n",
         "            # if(i % a == first_frame):\n",
         "            faces = face_recognition.face_locations(frame)\n",
         "            try:\n",
@@ -407,16 +404,14 @@
         "\n",
         "\n",
         "path_to_videos= [\"/content/drive/MyDrive/REAL_videos/zxacihctqp.mp4\"]\n",
-        "# load the video's path\n",
-        "\n",
         "\n",
         "video_dataset = validation_dataset(path_to_videos,\n",
         "                                   sequence_length=20,\n",
         "                                   transform=train_transforms)\n",
-        "model = Model(2).cuda()\n",
+        "\n",
+        "\n",
         "path_to_model = '/content/drive/MyDrive/PretrainModel/model_90_acc_60_frames_final_data.pt'\n",
-        "\n",
-        "\n",
+        "model = Model(2).cuda()\n",
         "model.load_state_dict(torch.load(path_to_model))\n",
         "model.eval()\n",
         "\n",
