--- a/test/notebooks/train.ipynb
+++ b/test/notebooks/train.ipynb
@@ -59,13 +59,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {},
         "colab_type": "code",
         "id": "QZ22Sj8d0JoT"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'torch'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[3], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#THis code is to check if the video is corrupted or not..\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#If the video is corrupted delete the video.\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mglob\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorchvision\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchvision\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m transforms\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+          ]
+        }
+      ],
       "source": [
         "#THis code is to check if the video is corrupted or not..\n",
         "#If the video is corrupted delete the video.\n",
@@ -82,56 +94,59 @@
         "import face_recognition\n",
         "\n",
         "\n",
-        "#Check if the file is corrupted or not\n",
+        "# Check if the file is corrupted or not\n",
         "def validate_video(vid_path, train_transforms):\n",
-        "    transform = train_transforms\n",
-        "    video_path = vid_path\n",
-        "    \n",
         "    count = 20\n",
         "    frames = []\n",
         "    \n",
-        "    for i, frame in enumerate(frame_extract(video_path)):\n",
-        "        frames.append(transform(frame))\n",
+        "    for _, frame in enumerate(frame_extract(vid_path)):\n",
+        "        frames.append(train_transforms(frame))\n",
         "        if(len(frames) == count): break\n",
         "        \n",
         "    frames = torch.stack(frames)\n",
         "    frames = frames[:count]\n",
         "    return frames\n",
         "    \n",
-        "#extract a from from video\n",
+        "# extract a from from video\n",
         "def frame_extract(path):\n",
-        "  vidObj = cv2.VideoCapture(path) \n",
-        "  success = 1\n",
-        "  while success:\n",
-        "      success, image = vidObj.read()\n",
-        "      if success:\n",
-        "          yield image\n",
+        "\tvidObj = cv2.VideoCapture(path) \n",
+        "\tsuccess = 1\n",
+        "\twhile success:\n",
+        "\t\tsuccess, image = vidObj.read()\n",
+        "\t\tif success: yield image\n",
         "\n",
         "im_size = 112\n",
         "mean = [0.485, 0.456, 0.406]\n",
         "std = [0.229, 0.224, 0.225]\n",
         "\n",
         "train_transforms = transforms.Compose([\n",
-        "                                        transforms.ToPILImage(),\n",
-        "                                        transforms.Resize((im_size,im_size)),\n",
-        "                                        transforms.ToTensor(),\n",
-        "                                        transforms.Normalize(mean,std)])\n",
+        "\t\t\t\t\t\ttransforms.ToPILImage(),\n",
+        "\t\t\t\t\t\ttransforms.Resize((im_size,im_size)),\n",
+        "\t\t\t\t\t\ttransforms.ToTensor(),\n",
+        "\t\t\t\t\t\ttransforms.Normalize(mean,std)])\n",
+        "\n",
+        "\n",
         "video_fil =  glob.glob('/content/drive/My Drive/Celeb_fake_face_only/*.mp4')\n",
         "video_fil += glob.glob('/content/drive/My Drive/Celeb_real_face_only/*.mp4')\n",
         "video_fil += glob.glob('/content/drive/My Drive/DFDC_FAKE_Face_only_data/*.mp4')\n",
         "video_fil += glob.glob('/content/drive/My Drive/DFDC_REAL_Face_only_data/*.mp4')\n",
         "video_fil += glob.glob('/content/drive/My Drive/FF_Face_only_data/*.mp4')\n",
-        "print(\"Total no of videos :\" , len(video_fil))\n",
+        "\n",
+        "\n",
+        "print(\"Total no of videos :\", len(video_fil))\n",
         "print(video_fil)\n",
-        "count = 0;\n",
+        "\n",
+        "count = 0\n",
         "for i in video_fil:\n",
-        "  try:\n",
-        "    count+=1\n",
-        "    validate_video(i,train_transforms)\n",
-        "  except:\n",
-        "    print(\"Number of video processed: \" , count ,\" Remaining : \" , (len(video_fil) - count))\n",
-        "    print(\"Corrupted video is : \" , i)\n",
-        "    continue\n",
+        "\ttry:\n",
+        "\t\tcount += 1\n",
+        "\t\tvalidate_video(i, train_transforms)\n",
+        "  \n",
+        "\texcept:\n",
+        "\t\tprint(\"Number of video processed: \", count, \" Remaining : \", (len(video_fil) - count))\n",
+        "\t\tprint(\"Corrupted video is : \", i)\n",
+        "\t\tcontinue\n",
+        "\n",
         "print((len(video_fil) - count))"
       ]
     },
@@ -145,30 +160,34 @@
       },
       "outputs": [],
       "source": [
-        "#to load preprocessod video to memory\n",
+        "# To load preprocessod video to memory\n",
         "import json\n",
         "import glob\n",
         "import numpy as np\n",
         "import cv2\n",
         "import copy\n",
         "import random\n",
+        "\n",
         "video_files =  glob.glob('/content/drive/My Drive/Celeb_fake_face_only/*.mp4')\n",
         "video_files += glob.glob('/content/drive/My Drive/Celeb_real_face_only/*.mp4')\n",
         "video_files += glob.glob('/content/drive/My Drive/DFDC_FAKE_Face_only_data/*.mp4')\n",
         "video_files += glob.glob('/content/drive/My Drive/DFDC_REAL_Face_only_data/*.mp4')\n",
         "video_files += glob.glob('/content/drive/My Drive/FF_Face_only_data/*.mp4')\n",
+        "\n",
         "random.shuffle(video_files)\n",
         "random.shuffle(video_files)\n",
         "frame_count = []\n",
+        "\n",
         "for video_file in video_files:\n",
-        "  cap = cv2.VideoCapture(video_file)\n",
-        "  if(int(cap.get(cv2.CAP_PROP_FRAME_COUNT))<100):\n",
-        "    video_files.remove(video_file)\n",
-        "    continue\n",
-        "  frame_count.append(int(cap.get(cv2.CAP_PROP_FRAME_COUNT)))\n",
-        "print(\"frames are \" , frame_count)\n",
+        "\tcap = cv2.VideoCapture(video_file)\n",
+        "\tif(int(cap.get(cv2.CAP_PROP_FRAME_COUNT)) < 100):\n",
+        "\t\tvideo_files.remove(video_file)\n",
+        "\t\tcontinue\n",
+        "\tframe_count.append(int(cap.get(cv2.CAP_PROP_FRAME_COUNT)))\n",
+        " \n",
+        "print(\"Frames are \" , frame_count)\n",
         "print(\"Total no of video: \" , len(frame_count))\n",
-        "print('Average frame per video:',np.mean(frame_count))"
+        "print(\"Average frame per video:\", np.mean(frame_count))"
       ]
     },
     {
@@ -192,48 +211,52 @@
         "import cv2\n",
         "import matplotlib.pyplot as plt\n",
         "import face_recognition\n",
+        "\n",
+        "\n",
         "class video_dataset(Dataset):\n",
-        "    def __init__(self,video_names,labels,sequence_length = 60,transform = None):\n",
+        "    def __init__(self, video_names, labels, sequence_length=60, transform=None):\n",
         "        self.video_names = video_names\n",
         "        self.labels = labels\n",
         "        self.transform = transform\n",
         "        self.count = sequence_length\n",
-        "    def __len__(self):\n",
-        "        return len(self.video_names)\n",
+        "        \n",
+        "    def __len__(self): return len(self.video_names)\n",
+        "    \n",
         "    def __getitem__(self,idx):\n",
         "        video_path = self.video_names[idx]\n",
         "        frames = []\n",
-        "        a = int(100/self.count)\n",
-        "        first_frame = np.random.randint(0,a)\n",
         "        temp_video = video_path.split('/')[-1]\n",
-        "        #print(temp_video)\n",
-        "        label = self.labels.iloc[(labels.loc[labels[\"file\"] == temp_video].index.values[0]),1]\n",
-        "        if(label == 'FAKE'):\n",
-        "          label = 0\n",
-        "        if(label == 'REAL'):\n",
-        "          label = 1\n",
-        "        for i,frame in enumerate(self.frame_extract(video_path)):\n",
-        "          frames.append(self.transform(frame))\n",
-        "          if(len(frames) == self.count):\n",
-        "            break\n",
+        "        label = self.labels.iloc[(self.labels.loc[self.labels[\"file\"] == temp_video].index.values[0]), 1]\n",
+        "        \n",
+        "        # if(label == 'FAKE'):\n",
+        "        #   label = 0\n",
+        "        # if(label == 'REAL'):\n",
+        "        #   label = 1\n",
+        "        \n",
+        "        label = 0 if label == \"FAKE\" else 1\n",
+        "          \n",
+        "        for _, frame in enumerate(self.frame_extract(video_path)):\n",
+        "            frames.append(self.transform(frame))\n",
+        "            if(len(frames) == self.count): break\n",
+        "            \n",
         "        frames = torch.stack(frames)\n",
         "        frames = frames[:self.count]\n",
-        "        #print(\"length:\" , len(frames), \"label\",label)\n",
-        "        return frames,label\n",
+        "        return frames, label\n",
+        "    \n",
         "    def frame_extract(self,path):\n",
-        "      vidObj = cv2.VideoCapture(path) \n",
-        "      success = 1\n",
-        "      while success:\n",
-        "          success, image = vidObj.read()\n",
-        "          if success:\n",
-        "              yield image\n",
-        "#plot the image\n",
+        "        vidObj = cv2.VideoCapture(path) \n",
+        "        success = 1\n",
+        "        while success:\n",
+        "            success, image = vidObj.read()\n",
+        "            if success: yield image\n",
+        "\n",
+        "\n",
         "def im_plot(tensor):\n",
-        "    image = tensor.cpu().numpy().transpose(1,2,0)\n",
+        "    image = tensor.cpu().numpy().transpose(1, 2, 0)\n",
         "    b,g,r = cv2.split(image)\n",
-        "    image = cv2.merge((r,g,b))\n",
-        "    image = image*[0.22803, 0.22145, 0.216989] +  [0.43216, 0.394666, 0.37645]\n",
-        "    image = image*255.0\n",
+        "    image = cv2.merge((r, g, b))\n",
+        "    image = image * [0.22803, 0.22145, 0.216989] + [0.43216, 0.394666, 0.37645]\n",
+        "    image = image * 255.0\n",
         "    plt.imshow(image.astype(int))\n",
         "    plt.show()"
       ]
