docs: update docs:

--- a/test/notebooks/pre_process.ipynb
+++ b/test/notebooks/pre_process.ipynb
@@ -31,7 +31,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!pip install face_recognition torch torchvision\n",
+        "!pip install face_recognition\n",
         "!mkdir '/content/drive/My Drive/FF_REAL_Face_only_data'"
       ]
     },
@@ -88,6 +88,7 @@
         "\tif(int(cap.get(cv2.CAP_PROP_FRAME_COUNT)) < 150):\n",
         "\t\tvideo_files.remove(video_file)\n",
         "\t\tcontinue\n",
+        "\n",
         "\tframe_count.append(int(cap.get(cv2.CAP_PROP_FRAME_COUNT)))\n",
         "  \n",
         "print(\"Frames: \", frame_count)\n",
@@ -113,11 +114,6 @@
         "\t\tsuccess, image = vidObj.read()\n",
         "\t\tif success: yield image\n",
         "\n",
-        "import torch\n",
-        "import torchvision\n",
-        "from torchvision import transforms\n",
-        "from torch.utils.data import DataLoader\n",
-        "from torch.utils.data.dataset import Dataset\n",
         "import os\n",
         "import numpy as np\n",
         "import cv2\n",
@@ -127,7 +123,7 @@
         "\n",
         "\n",
         "# process the frames\n",
-        "def create_face_videos(path_list,out_dir):\n",
+        "def create_face_videos(path_list, out_dir):\n",
         "    already_present_count = glob.glob(out_dir + '*.mp4')\n",
         "    print(\"No of videos already present \", len(already_present_count))\n",
         "    \n",
@@ -141,7 +137,7 @@
         "        frames = []\n",
         "        out = cv2.VideoWriter(out_path,cv2.VideoWriter_fourcc('M', 'J', 'P', 'G'), 30, (112, 112))\n",
         "        \n",
-        "        for idx,frame in enumerate(frame_extract(path)):\n",
+        "        for idx, frame in enumerate(frame_extract(path)):\n",
         "            if idx <= 150:\n",
         "                frames.append(frame)\n",
         "                if len(frames) == 4:\n",
@@ -168,7 +164,7 @@
       },
       "outputs": [],
       "source": [
-        "create_face_videos(video_files,'/content/drive/My Drive/FF_REAL_Face_only_data/')"
+        "create_face_videos(video_files, '/content/drive/My Drive/FF_REAL_Face_only_data/')"
       ]
     }
   ],
