--- a/test/notebooks/train.ipynb
+++ b/test/notebooks/train.ipynb
@@ -94,6 +94,12 @@
         "import face_recognition\n",
         "\n",
         "\n",
+        "\n",
+        "im_size = 112\n",
+        "mean = [0.485, 0.456, 0.406]\n",
+        "std = [0.229, 0.224, 0.225]\n",
+        "\n",
+        "\n",
         "# Check if the file is corrupted or not\n",
         "def validate_video(vid_path, train_transforms):\n",
         "    count = 20\n",
@@ -107,17 +113,14 @@
         "    frames = frames[:count]\n",
         "    return frames\n",
         "    \n",
-        "# extract a from from video\n",
+        "\n",
+        "# Extract a from from video\n",
         "def frame_extract(path):\n",
         "\tvidObj = cv2.VideoCapture(path) \n",
         "\tsuccess = 1\n",
         "\twhile success:\n",
         "\t\tsuccess, image = vidObj.read()\n",
         "\t\tif success: yield image\n",
-        "\n",
-        "im_size = 112\n",
-        "mean = [0.485, 0.456, 0.406]\n",
-        "std = [0.229, 0.224, 0.225]\n",
         "\n",
         "train_transforms = transforms.Compose([\n",
         "\t\t\t\t\t\ttransforms.ToPILImage(),\n",
@@ -160,7 +163,7 @@
       },
       "outputs": [],
       "source": [
-        "# To load preprocessod video to memory\n",
+        "# Load preprocessod video to memory\n",
         "import json\n",
         "import glob\n",
         "import numpy as np\n",
@@ -302,42 +305,42 @@
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "header_list = [\"file\",\"label\"]\n",
-        "labels = pd.read_csv('/content/drive/My Drive/Gobal_metadata.csv',names=header_list)\n",
-        "#print(labels)\n",
-        "train_videos = video_files[:int(0.8*len(video_files))]\n",
-        "valid_videos = video_files[int(0.8*len(video_files)):]\n",
-        "print(\"train : \" , len(train_videos))\n",
-        "print(\"test : \" , len(valid_videos))\n",
-        "# train_videos,valid_videos = train_test_split(data,test_size = 0.2)\n",
-        "# print(train_videos)\n",
+        "header_list = [\"file\", \"label\"]\n",
+        "labels = pd.read_csv('/content/drive/My Drive/Gobal_metadata.csv', names=header_list)\n",
         "\n",
-        "print(\"TRAIN: \", \"Real:\",number_of_real_and_fake_videos(train_videos)[0],\" Fake:\",number_of_real_and_fake_videos(train_videos)[1])\n",
-        "print(\"TEST: \", \"Real:\",number_of_real_and_fake_videos(valid_videos)[0],\" Fake:\",number_of_real_and_fake_videos(valid_videos)[1])\n",
         "\n",
+        "train_videos = video_files[: int(0.8 * len(video_files))]\n",
+        "valid_videos = video_files[int(0.8 * len(video_files)) :]\n",
+        "\n",
+        "print(\"train : \", len(train_videos))\n",
+        "print(\"test : \", len(valid_videos))\n",
+        "print(\"TRAIN: \", \"Real:\", number_of_real_and_fake_videos(train_videos)[0], \" Fake:\", number_of_real_and_fake_videos(train_videos)[1])\n",
+        "print(\"TEST: \", \"Real:\", number_of_real_and_fake_videos(valid_videos)[0], \" Fake:\", number_of_real_and_fake_videos(valid_videos)[1])\n",
         "\n",
         "im_size = 112\n",
         "mean = [0.485, 0.456, 0.406]\n",
         "std = [0.229, 0.224, 0.225]\n",
         "\n",
         "train_transforms = transforms.Compose([\n",
-        "                                        transforms.ToPILImage(),\n",
-        "                                        transforms.Resize((im_size,im_size)),\n",
-        "                                        transforms.ToTensor(),\n",
-        "                                        transforms.Normalize(mean,std)])\n",
+        "\t\t\t\t\ttransforms.ToPILImage(),\n",
+        "\t\t\t\t\ttransforms.Resize((im_size,im_size)),\n",
+        "\t\t\t\t\ttransforms.ToTensor(),\n",
+        "\t\t\t\t\ttransforms.Normalize(mean,std)])\n",
         "\n",
         "test_transforms = transforms.Compose([\n",
-        "                                        transforms.ToPILImage(),\n",
-        "                                        transforms.Resize((im_size,im_size)),\n",
-        "                                        transforms.ToTensor(),\n",
-        "                                        transforms.Normalize(mean,std)])\n",
-        "train_data = video_dataset(train_videos,labels,sequence_length = 10,transform = train_transforms)\n",
-        "#print(train_data)\n",
-        "val_data = video_dataset(valid_videos,labels,sequence_length = 10,transform = train_transforms)\n",
-        "train_loader = DataLoader(train_data,batch_size = 4,shuffle = True,num_workers = 4)\n",
-        "valid_loader = DataLoader(val_data,batch_size = 4,shuffle = True,num_workers = 4)\n",
-        "image,label = train_data[0]\n",
-        "im_plot(image[0,:,:,:])"
+        "\t\t\t\t\ttransforms.ToPILImage(),\n",
+        "\t\t\t\t\ttransforms.Resize((im_size,im_size)),\n",
+        "\t\t\t\t\ttransforms.ToTensor(),\n",
+        "\t\t\t\t\ttransforms.Normalize(mean,std)])\n",
+        "\n",
+        "train_data = video_dataset(train_videos, labels, sequence_length=10, transform=train_transforms)\n",
+        "val_data = video_dataset(valid_videos, labels, sequence_length=10, transform=train_transforms)\n",
+        "\n",
+        "train_loader = DataLoader(train_data, batch_size=4, shuffle=True, num_workers=4)\n",
+        "valid_loader = DataLoader(val_data, batch_size=4, shuffle=True, num_workers=4)\n",
+        "\n",
+        "image, label = train_data[0]\n",
+        "im_plot(image[0, :, :, :])"
       ]
     },
     {
@@ -353,24 +356,26 @@
         "#Model with feature visualization\n",
         "from torch import nn\n",
         "from torchvision import models\n",
+        "\n",
         "class Model(nn.Module):\n",
-        "    def __init__(self, num_classes,latent_dim= 2048, lstm_layers=1 , hidden_dim = 2048, bidirectional = False):\n",
+        "    def __init__(self, num_classes, latent_dim=2048, lstm_layers=1, hidden_dim=2048, bidirectional=False):\n",
         "        super(Model, self).__init__()\n",
-        "        model = models.resnext50_32x4d(pretrained = True) #Residual Network CNN\n",
+        "        model = models.resnext50_32x4d(pretrained=True)\n",
         "        self.model = nn.Sequential(*list(model.children())[:-2])\n",
-        "        self.lstm = nn.LSTM(latent_dim,hidden_dim, lstm_layers,  bidirectional)\n",
+        "        self.lstm = nn.LSTM(latent_dim, hidden_dim, lstm_layers, bidirectional)\n",
         "        self.relu = nn.LeakyReLU()\n",
         "        self.dp = nn.Dropout(0.4)\n",
-        "        self.linear1 = nn.Linear(2048,num_classes)\n",
+        "        self.linear1 = nn.Linear(2048, num_classes)\n",
         "        self.avgpool = nn.AdaptiveAvgPool2d(1)\n",
+        "        \n",
         "    def forward(self, x):\n",
-        "        batch_size,seq_length, c, h, w = x.shape\n",
+        "        batch_size, seq_length, c, h, w = x.shape\n",
         "        x = x.view(batch_size * seq_length, c, h, w)\n",
         "        fmap = self.model(x)\n",
         "        x = self.avgpool(fmap)\n",
-        "        x = x.view(batch_size,seq_length,2048)\n",
-        "        x_lstm,_ = self.lstm(x,None)\n",
-        "        return fmap,self.dp(self.linear1(torch.mean(x_lstm,dim = 1)))"
+        "        x = x.view(batch_size, seq_length, 2048)\n",
+        "        x_lstm, _ = self.lstm(x, None)\n",
+        "        return fmap,self.dp(self.linear1(torch.mean(x_lstm, dim=1)))"
       ]
     },
     {
@@ -384,7 +389,7 @@
       "outputs": [],
       "source": [
         "model = Model(2).cuda()\n",
-        "a,b = model(torch.from_numpy(np.empty((1,20,3,112,112))).type(torch.cuda.FloatTensor))"
+        "a, b = model(torch.from_numpy(np.empty((1, 20, 3, 112, 112))).type(torch.cuda.FloatTensor))"
       ]
     },
     {
@@ -403,23 +408,28 @@
         "import os\n",
         "import sys\n",
         "import os\n",
+        "\n",
+        "\n",
         "def train_epoch(epoch, num_epochs, data_loader, model, criterion, optimizer):\n",
         "    model.train()\n",
         "    losses = AverageMeter()\n",
         "    accuracies = AverageMeter()\n",
         "    t = []\n",
+        "    \n",
         "    for i, (inputs, targets) in enumerate(data_loader):\n",
         "        if torch.cuda.is_available():\n",
         "            targets = targets.type(torch.cuda.LongTensor)\n",
         "            inputs = inputs.cuda()\n",
+        "            \n",
         "        _,outputs = model(inputs)\n",
-        "        loss  = criterion(outputs,targets.type(torch.cuda.LongTensor))\n",
+        "        loss  = criterion(outputs, targets.type(torch.cuda.LongTensor))\n",
         "        acc = calculate_accuracy(outputs, targets.type(torch.cuda.LongTensor))\n",
         "        losses.update(loss.item(), inputs.size(0))\n",
         "        accuracies.update(acc, inputs.size(0))\n",
         "        optimizer.zero_grad()\n",
         "        loss.backward()\n",
         "        optimizer.step()\n",
+        "        \n",
         "        sys.stdout.write(\n",
         "                \"\\r[Epoch %d/%d] [Batch %d / %d] [Loss: %f, Acc: %.2f%%]\"\n",
         "                % (\n",
@@ -429,9 +439,10 @@
         "                    len(data_loader),\n",
         "                    losses.avg,\n",
         "                    accuracies.avg))\n",
-        "    torch.save(model.state_dict(),'/content/checkpoint.pt')\n",
+        "    torch.save(model.state_dict(), '/content/checkpoint.pt')\n",
         "    return losses.avg,accuracies.avg\n",
-        "def test(epoch,model, data_loader ,criterion):\n",
+        "\n",
+        "def test(epoch, model, data_loader, criterion):\n",
         "    print('Testing')\n",
         "    model.eval()\n",
         "    losses = AverageMeter()\n",
@@ -439,6 +450,7 @@
         "    pred = []\n",
         "    true = []\n",
         "    count = 0\n",
+        "    \n",
         "    with torch.no_grad():\n",
         "        for i, (inputs, targets) in enumerate(data_loader):\n",
         "            if torch.cuda.is_available():\n",
@@ -463,10 +475,15 @@
         "                    )\n",
         "        print('\\nAccuracy {}'.format(accuracies.avg))\n",
         "    return true,pred,losses.avg,accuracies.avg\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "class AverageMeter(object):\n",
         "    \"\"\"Computes and stores the average and current value\"\"\"\n",
         "    def __init__(self):\n",
         "        self.reset()\n",
+        "        \n",
         "    def reset(self):\n",
         "        self.val = 0\n",
         "        self.avg = 0\n",
@@ -478,19 +495,20 @@
         "        self.sum += val * n\n",
         "        self.count += n\n",
         "        self.avg = self.sum / self.count\n",
+        "        \n",
+        "        \n",
         "def calculate_accuracy(outputs, targets):\n",
         "    batch_size = targets.size(0)\n",
-        "\n",
         "    _, pred = outputs.topk(1, 1, True)\n",
         "    pred = pred.t()\n",
         "    correct = pred.eq(targets.view(1, -1))\n",
         "    n_correct_elems = correct.float().sum().item()\n",
-        "    return 100* n_correct_elems / batch_size"
+        "    return 100 * n_correct_elems / batch_size"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -500,6 +518,7 @@
       "source": [
         "import seaborn as sn\n",
         "#Output confusion matrix\n",
+        "\n",
         "def print_confusion_matrix(y_true, y_pred):\n",
         "    cm = confusion_matrix(y_true, y_pred)\n",
         "    print('True positive = ', cm[0][0])\n",
