refactor: final refactor

--- a/test/notebooks/train.ipynb
+++ b/test/notebooks/train.ipynb
@@ -526,16 +526,17 @@
         "    print('False negative = ', cm[1][0])\n",
         "    print('True negative = ', cm[1][1])\n",
         "    print('\\n')\n",
+        "    \n",
         "    df_cm = pd.DataFrame(cm, range(2), range(2))\n",
         "    sn.set(font_scale=1.4) # for label size\n",
         "    sn.heatmap(df_cm, annot=True, annot_kws={\"size\": 16}) # font size\n",
         "    plt.ylabel('Actual label', size = 20)\n",
         "    plt.xlabel('Predicted label', size = 20)\n",
-        "    plt.xticks(np.arange(2), ['Fake', 'Real'], size = 16)\n",
-        "    plt.yticks(np.arange(2), ['Fake', 'Real'], size = 16)\n",
+        "    plt.xticks(np.arange(2), ['Fake', 'Real'], size=16)\n",
+        "    plt.yticks(np.arange(2), ['Fake', 'Real'], size=16)\n",
         "    plt.ylim([2, 0])\n",
         "    plt.show()\n",
-        "    calculated_acc = (cm[0][0]+cm[1][1])/(cm[0][0]+cm[0][1]+cm[1][0]+ cm[1][1])\n",
+        "    calculated_acc = (cm[0][0] + cm[1][1]) / (cm[0][0] + cm[0][1] + cm[1][0] + cm[1][1])\n",
         "    print(\"Calculated Accuracy\",calculated_acc*100)"
       ]
     },
@@ -549,29 +550,30 @@
       },
       "outputs": [],
       "source": [
-        "def plot_loss(train_loss_avg,test_loss_avg,num_epochs):\n",
-        "  loss_train = train_loss_avg\n",
-        "  loss_val = test_loss_avg\n",
-        "  print(num_epochs)\n",
-        "  epochs = range(1,num_epochs+1)\n",
-        "  plt.plot(epochs, loss_train, 'g', label='Training loss')\n",
-        "  plt.plot(epochs, loss_val, 'b', label='validation loss')\n",
-        "  plt.title('Training and Validation loss')\n",
-        "  plt.xlabel('Epochs')\n",
-        "  plt.ylabel('Loss')\n",
-        "  plt.legend()\n",
-        "  plt.show()\n",
-        "def plot_accuracy(train_accuracy,test_accuracy,num_epochs):\n",
-        "  loss_train = train_accuracy\n",
-        "  loss_val = test_accuracy\n",
-        "  epochs = range(1,num_epochs+1)\n",
-        "  plt.plot(epochs, loss_train, 'g', label='Training accuracy')\n",
-        "  plt.plot(epochs, loss_val, 'b', label='validation accuracy')\n",
-        "  plt.title('Training and Validation accuracy')\n",
-        "  plt.xlabel('Epochs')\n",
-        "  plt.ylabel('Accuracy')\n",
-        "  plt.legend()\n",
-        "  plt.show()"
+        "def plot_loss(train_loss_avg, test_loss_avg, num_epochs):\n",
+        "\tloss_train = train_loss_avg\n",
+        "\tloss_val = test_loss_avg\n",
+        "\tprint(num_epochs)\n",
+        "\tepochs = range(1, num_epochs+1)\n",
+        "\tplt.plot(epochs, loss_train, 'g', label='Training loss')\n",
+        "\tplt.plot(epochs, loss_val, 'b', label='Validation loss')\n",
+        "\tplt.title('Training and Validation loss')\n",
+        "\tplt.xlabel('Epochs')\n",
+        "\tplt.ylabel('Loss')\n",
+        "\tplt.legend()\n",
+        "\tplt.show()\n",
+        " \n",
+        "def plot_accuracy(train_accuracy, test_accuracy, num_epochs):\n",
+        "\tloss_train = train_accuracy\n",
+        "\tloss_val = test_accuracy\n",
+        "\tepochs = range(1, num_epochs+1)\n",
+        "\tplt.plot(epochs, loss_train, 'g', label='Training accuracy')\n",
+        "\tplt.plot(epochs, loss_val, 'b', label='validation accuracy')\n",
+        "\tplt.title('Training and Validation accuracy')\n",
+        "\tplt.xlabel('Epochs')\n",
+        "\tplt.ylabel('Accuracy')\n",
+        "\tplt.legend()\n",
+        "\tplt.show()"
       ]
     },
     {
@@ -590,26 +592,25 @@
         "#number of epochs \n",
         "num_epochs = 20\n",
         "\n",
-        "optimizer = torch.optim.Adam(model.parameters(), lr= lr,weight_decay = 1e-5)\n",
-        "\n",
-        "#class_weights = torch.from_numpy(np.asarray([1,15])).type(torch.FloatTensor).cuda()\n",
-        "#criterion = nn.CrossEntropyLoss(weight = class_weights).cuda()\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=lr, weight_decay=1e-5)\n",
         "criterion = nn.CrossEntropyLoss().cuda()\n",
-        "train_loss_avg =[]\n",
+        "train_loss_avg = []\n",
         "train_accuracy = []\n",
         "test_loss_avg = []\n",
         "test_accuracy = []\n",
-        "for epoch in range(1,num_epochs+1):\n",
-        "    l, acc = train_epoch(epoch,num_epochs,train_loader,model,criterion,optimizer)\n",
+        "\n",
+        "for epoch in range(1, num_epochs+1):\n",
+        "    l, acc = train_epoch(epoch, num_epochs, train_loader, model, criterion, optimizer)\n",
         "    train_loss_avg.append(l)\n",
         "    train_accuracy.append(acc)\n",
-        "    true,pred,tl,t_acc = test(epoch,model,valid_loader,criterion)\n",
+        "    true, pred, tl, t_acc = test(epoch, model, valid_loader, criterion)\n",
         "    test_loss_avg.append(tl)\n",
         "    test_accuracy.append(t_acc)\n",
-        "plot_loss(train_loss_avg,test_loss_avg,len(train_loss_avg))\n",
-        "plot_accuracy(train_accuracy,test_accuracy,len(train_accuracy))\n",
-        "print(confusion_matrix(true,pred))\n",
-        "print_confusion_matrix(true,pred)"
+        "    \n",
+        "plot_loss(train_loss_avg, test_loss_avg, len(train_loss_avg))\n",
+        "plot_accuracy(train_accuracy, test_accuracy, len(train_accuracy))\n",
+        "print(confusion_matrix(true, pred))\n",
+        "print_confusion_matrix(true, pred)"
       ]
     }
   ],
