chore: config asset

--- a/test/notebooks/train.ipynb
+++ b/test/notebooks/train.ipynb
@@ -375,7 +375,7 @@
         "        x = self.avgpool(fmap)\n",
         "        x = x.view(batch_size, seq_length, 2048)\n",
         "        x_lstm, _ = self.lstm(x, None)\n",
-        "        return fmap,self.dp(self.linear1(torch.mean(x_lstm, dim=1)))"
+        "        return fmap, self.dp(self.linear1(torch.mean(x_lstm, dim=1)))"
       ]
     },
     {
@@ -431,14 +431,14 @@
         "        optimizer.step()\n",
         "        \n",
         "        sys.stdout.write(\n",
-        "                \"\\r[Epoch %d/%d] [Batch %d / %d] [Loss: %f, Acc: %.2f%%]\"\n",
-        "                % (\n",
-        "                    epoch,\n",
-        "                    num_epochs,\n",
-        "                    i,\n",
-        "                    len(data_loader),\n",
-        "                    losses.avg,\n",
-        "                    accuracies.avg))\n",
+        "\t\t\t\"\\r[Epoch %d/%d] [Batch %d / %d] [Loss: %f, Acc: %.2f%%]\"\n",
+        "\t\t\t% (\n",
+        "\t\t\t\tepoch,\n",
+        "\t\t\t\tnum_epochs,\n",
+        "\t\t\t\ti,\n",
+        "\t\t\t\tlen(data_loader),\n",
+        "\t\t\t\tlosses.avg,\n",
+        "\t\t\t\taccuracies.avg))\n",
         "    torch.save(model.state_dict(), '/content/checkpoint.pt')\n",
         "    return losses.avg,accuracies.avg\n",
         "\n",
