refactor: config train

--- a/test/notebooks/train.ipynb
+++ b/test/notebooks/train.ipynb
@@ -308,7 +308,6 @@
         "header_list = [\"file\", \"label\"]\n",
         "labels = pd.read_csv('/content/drive/My Drive/Gobal_metadata.csv', names=header_list)\n",
         "\n",
-        "\n",
         "train_videos = video_files[: int(0.8 * len(video_files))]\n",
         "valid_videos = video_files[int(0.8 * len(video_files)) :]\n",
         "\n",
@@ -409,7 +408,6 @@
         "import sys\n",
         "import os\n",
         "\n",
-        "\n",
         "def train_epoch(epoch, num_epochs, data_loader, model, criterion, optimizer):\n",
         "    model.train()\n",
         "    losses = AverageMeter()\n",
@@ -440,7 +438,7 @@
         "\t\t\t\tlosses.avg,\n",
         "\t\t\t\taccuracies.avg))\n",
         "    torch.save(model.state_dict(), '/content/checkpoint.pt')\n",
-        "    return losses.avg,accuracies.avg\n",
+        "    return losses.avg, accuracies.avg    # \n",
         "\n",
         "def test(epoch, model, data_loader, criterion):\n",
         "    print('Testing')\n",
@@ -456,10 +454,11 @@
         "            if torch.cuda.is_available():\n",
         "                targets = targets.cuda().type(torch.cuda.FloatTensor)\n",
         "                inputs = inputs.cuda()\n",
-        "            _,outputs = model(inputs)\n",
+        "                \n",
+        "            _, outputs = model(inputs)\n",
         "            loss = torch.mean(criterion(outputs, targets.type(torch.cuda.LongTensor)))\n",
         "            acc = calculate_accuracy(outputs,targets.type(torch.cuda.LongTensor))\n",
-        "            _,p = torch.max(outputs,1) \n",
+        "            _, p = torch.max(outputs,1) \n",
         "            true += (targets.type(torch.cuda.LongTensor)).detach().cpu().numpy().reshape(len(targets)).tolist()\n",
         "            pred += p.detach().cpu().numpy().reshape(len(p)).tolist()\n",
         "            losses.update(loss.item(), inputs.size(0))\n",
@@ -474,7 +473,7 @@
         "                        )\n",
         "                    )\n",
         "        print('\\nAccuracy {}'.format(accuracies.avg))\n",
-        "    return true,pred,losses.avg,accuracies.avg\n",
+        "    return true, pred, losses.avg, accuracies.avg\n",
         "\n",
         "\n",
         "\n",
